--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"consistence/coding-standard": "0.6",
 		"jakub-onderka/php-console-highlighter": "0.3.1",
 		"jakub-onderka/php-parallel-lint": "0.7",
+		"phing/phing": "2.11.0",
 		"phpunit/phpunit": "4.6.9"
 	},
 	"autoload": {
