--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	],
 	"require": {
 		"php": "~7.0",
-		"doctrine/dbal": "~2.4"
+		"doctrine/dbal": "~2.4,<2.6"
 	},
 	"require-dev": {
 		"consistence/coding-standard": "1.0",
